# pydebiaseddta

./: .gitignore  .readthedocs.yml  404.html  LICENSE  MANIFEST.in  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
api/debiasing/: index.html
api/evaluation/: index.html
api/guides/: index.html
api/predictors/: index.html
api/sequence/: index.html
api/utils/: index.html
docs/: api.rst  backup.py  conf.py  index.md  requirements.txt
docs/api/: debiasing.md  evaluation.md  guides.md  predictors.md  sequence.md  utils.md
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_autosummary/: pydebiaseddta.debiasing.debiaseddta.DebiasedDTA.rst  pydebiaseddta.debiasing.debiaseddta.rst  pydebiaseddta.debiasing.rst  pydebiaseddta.evaluation.rst  (+46 more)
examples/: additional_use_cases.ipynb  custom_dta_debias.py  hyperparameter_examples.ipynb  quickstart.ipynb  test_model_runs.py
pydebiaseddta/: __init__.py  evaluation.py  utils.py  visualization.py
pydebiaseddta/debiasing/: __init__.py  debiaseddta.py
pydebiaseddta/guides/: __init__.py  abstract_guide.py  bowdta.py  iddta.py  outdta.py  rfdta.py
pydebiaseddta/predictors/: __init__.py  abstract_predictors.py  base_predictors.py  bpedta.py  deepdta.py  lmdta.py
pydebiaseddta/pydebiaseddta/: __init__.py
pydebiaseddta/sequence/: __init__.py  smiles_processing.py  word_identification.py
pydebiaseddta/utils/: __init__.py  utils.py
scripts/: config.py  pydebiaseddta_experiment.py
search/: search_index.json
stylesheets/: style.css
(+21 files in other folders)
